# genORM

./: .gitignore  CMakeLists.txt  Cargo.toml  README.md
ext/googletest/: CMakeLists.txt
ext/sqlite/: CMakeLists.txt
lib-cxx/include/genORM/: genORM.h
lib-cxx/src/: genORM.cc
src/: cxx.rs  main.rs  util.rs
test/: testproj.json
test-cxx/: TestProj.orm.cc  TestProj.orm.h  test.cc
